Update deploy.sh